feat(backend): Orchestration + corrected Docker + Swagger
